2009-01-27  Brady Eidson  <beidson@apple.com>

        Reviewed by Dan Bernstein

        Rework FrameLoaderClient to work on a CachedFrame basis instead of CachedPage

        * WebCore.base.exp:
        * history/CachedPage.cpp:
        * history/CachedPage.h:
        (WebCore::CachedPage::cachedMainFrame):

        * loader/EmptyClients.h:
        (WebCore::EmptyFrameLoaderClient::savePlatformDataToCachedFrame):
        (WebCore::EmptyFrameLoaderClient::transitionToCommittedFromCachedFrame):

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::restoreDocumentState):
        (WebCore::FrameLoader::commitProvisionalLoad):
        (WebCore::FrameLoader::transitionToCommitted):
        (WebCore::FrameLoader::cachePageForHistoryItem):
        * loader/FrameLoaderClient.h:

2009-01-26  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=23360

        Add variants of all the methods that compute dirty rects for repainting
        with versions that compute those rects relative to some container
        RenderBox that acts as a painting root.

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::styleDidChange):
        (WebCore::RenderBox::outlineBoundsForRepaint):
        (WebCore::RenderBox::localToContainerQuad):
        (WebCore::RenderBox::clippedOverflowRectForRepaint):
        (WebCore::RenderBox::computeRectForRepaint):
        * rendering/RenderBox.h:
        * rendering/RenderForeignObject.cpp:
        (WebCore::RenderForeignObject::computeRectForRepaint):
        * rendering/RenderForeignObject.h:
        * rendering/RenderInline.cpp:
        (WebCore::RenderInline::clippedOverflowRectForRepaint):
        * rendering/RenderInline.h:
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::containerForRepaint):
        (WebCore::RenderObject::repaint):
        (WebCore::RenderObject::repaintRectangle):